--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -3,12 +3,12 @@ mixin rollButton(header, base, rollFormula)
     button(data-i18n=header name=`roll_${header}` type='roll' value!=rollBeginging+'{{header=^{'+header+'}}}{{base='+base+'}}{{dice=[[(('+rollFormula+')'+rollEnding) #{header}
 
 //- SKILL BUTTON
-mixin skillButton(specialization)
+mixin skillButton(specialization, skillType)
     - const rollName = specialization === true ? 'specialization' : 'skill';
     - const rollFormula = specialization === true ? '@{dicepool}+@{attribute}+2' : '@{dicepool}+@{attribute}';
     - const desc = specialization === true ? 'Spec: @{specialization}, @{display_limit}' : '@{display_limit}';
-    - const display = specialization === true ? 'attr_display_specialization' : 'attr_display';
-    button(name=`roll_${rollName}` type='roll' value!=rollBeginging+'{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(('+rollFormula+')'+rollEnding+'{{desc='+desc+'}}')
+    - const display = specialization === true ? 'attr_specialization' : skillType != 'active' ? 'attr_skill' : 'attr_display_skill';
+    button.eclipse(name=`roll_${rollName}` type='roll' value!=rollBeginging+'{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(('+rollFormula+')'+rollEnding+'{{desc='+desc+'}}')
         span(name=display)
 
 //- ROLLS
