fix npc with new ini mod & skill changes

--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -79,9 +79,6 @@
 				.rows(class=val[2])
 					+initiativeRoll(key, val[0], val[1])
 					label.settings(data-i18n-title='modifier' title='modifier')
-						if key === 'Initiative'
-							input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
-						else
 							input(name='attr_'+val[0]+'_mod_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
 					span.settings +
 					label.settings(data-i18n-title='modifierdice' title='Modifier Dice')
@@ -224,16 +221,21 @@
 		each val, key in {'active': ['skills', 'Agility', 'Physical'],'knowledge':['knowledgeskills', 'Logic', 'Mental'], 'language': ['languageskills', 'Charisma', 'Social']}
 			.rows.grunt.repeating.inline-repeating
 				h1(data-i18n=val[0]) #{val[0]}
-				fieldset(class='repeating_'+key)
+				fieldset(class=`repeating_${key}`)
+
 					input(name='attr_display_rating' type='hidden')
-					input(name='attr_display_specialization' type='hidden' value='')
+					input(name='attr_specialization' type='hidden' value='')
 					input(name='attr_display_limit' type='hidden' value=val[2])
 					input(name='attr_display_attribute' type='hidden' value=val[1])
 					input(name='attr_dicepool' type='hidden' value='0')
+
+          if key === 'active'
+            input(name='attr_display_skill' type='hidden' value='')
+
 					input.toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
 					span.pictos x
 					//- SKILL BUTTON
-					+skillButton(false)
+					+skillButton(false, key)
 					//- SPECILIZATION BUTTON
 					+skillButton(true)
 					span(name='attr_display_rating')
