--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -1,4 +1,4 @@
-input(name='attr_version' type='hidden' value='4.1')
+input(name='attr_version' type='hidden' value='4.11')
 
 //- CHARACTER SHEET PAGE
 input.sheet_type(name='attr_sheet_type' type='hidden' value='pc')
@@ -83,7 +83,7 @@ include src/pug/_variables.pug
 									input(name='attr_display_limit' type='hidden' value=val[2])
 									input(name='attr_display_attribute' type='hidden' value=val[1])
 									input(name='attr_dicepool' type='hidden' value='0')
-
+ 
 									if key === 'active'
 										input(name='attr_display_skill' type='hidden' value='')
 
@@ -241,7 +241,7 @@ include src/pug/_variables.pug
 											option(data-i18n='gunnery' value='@{gunnery}') Gunnery
 									h3(data-i18n='specialization') specialization
 									label(data-i18n-title='specialization' title='specialization')
-										input(name='attr_spec' value='2' title=`${rangeRepeatingSection}_spec}` type='checkbox')
+										input(name='attr_specialization' value='2' title=`${rangeRepeatingSection}_specialization}` type='checkbox')
 									h3(data-i18n='modifier') modifier
 									label(data-i18n-title='modifier' title='modifier')
 										input(name='attr_dicepool_modifier' title=`${rangeRepeatingSection}_dicepool_modifier}` type='number')
@@ -281,7 +281,7 @@ include src/pug/_variables.pug
 											option(data-i18n='gunnery' value='@{gunnery}') Gunnery
 									h3(data-i18n='specialization') specialization
 									label(data-i18n-title='specialization' title='specialization')
-										input(name='attr_spec' value='2' title=`${meleeRepeatingSection}_spec}` type='checkbox')
+										input(name='attr_specialization' value='2' title=`${meleeRepeatingSection}_specialization}` type='checkbox')
 									h3(data-i18n='modifier') modifier
 									label(data-i18n-title='modifier' title='modifier')
 										input(name='attr_dicepool_modifier' title=`${meleeRepeatingSection}_dicepool_modifier}` type='number')
@@ -578,6 +578,8 @@ include src/html/hidden.html
 script(type="text/worker")
 
 	include src/js/attributes.js
+
+	include src/js/Classes/PrimaryWeapon.js
 
 	include src/js/processingFunctions.js
 
