- Styled rogue skills armor adjustment tables for readability
- Streamline melee weapons and ranged weapons
- Removed Specialist from ranged weapon, and master from melee and ranged weapons. These were based on the Player Options Combat and Tactics books. The values in these books are different from the players handbook and therefore not compatible. This would result in wrong calculated values
- Removed dexterity bonus to ranged damage. Dexterity only adds a Missle Attack Adjustment, no damage adjustments

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -419,7 +419,6 @@ input[type="checkbox"]
     width: 16px;
     height: 16px;
     position: relative;
-    top: 5px;
     left: 6px;
     margin: -10px;
     cursor: pointer;
@@ -1136,4 +1135,22 @@ button:active
     color: #ffffff;
     padding: 4px;
     margin: 0px;
+}
+
+th.default-header {
+    background-color: #7C0303;
+    color: #FFF;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    vertical-align: middle;
+}
+
+.centering {
+    text-align: center;
+    vertical-align: middle;
+}
+.centering-padding-left {
+    text-align: center;
+    vertical-align: middle;
+    padding-left: 5px;
 }
