Prefixed new styling with 'sheet-' Apparently they 'sheet-' is prefixed to all css classes

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -1137,7 +1137,7 @@ button:active
     margin: 0px;
 }
 
-th.default-header {
+th.sheet-default-header {
     background-color: #7C0303;
     color: #FFF;
     font-family: Arial, sans-serif;
@@ -1145,11 +1145,11 @@ th.default-header {
     vertical-align: middle;
 }
 
-.centering {
+.sheet-centering {
     text-align: center;
     vertical-align: middle;
 }
-.centering-padding-left {
+.sheet-centering-padding-left {
     text-align: center;
     vertical-align: middle;
     padding-left: 5px;
