--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -420,6 +420,24 @@ textarea
 	grid-column-gap: 4px;
 }
 
+.sheet-smallCraftSheetGrid
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/creatureLog.png);
+	background-size: 900px 285px;
+	background-repeat: no-repeat;
+	width: 900px;
+	height: 280px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 85px 70px 1fr 80px 1fr 150px 25px 25px 25px 25px 5px;
+	grid-template-rows: 24px repeat(14,18px) 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
+
+
 /* ******************************* */
 /*			Aspects		           */
 /* ******************************* */
@@ -5162,6 +5180,18 @@ input[type="number"].sheet-resourceBox
 	justify-self: center;
 }
 
+input[type=number].sheet-threatNumberBox
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	font-weight: 500;
+	width: 185px;
+	vertical-align: baseline;
+	justify-self: start;
+	text-align:left;
+}
+
 textarea.sheet-sophontTagBox
 {
 	margin-top: 3px;
@@ -5217,6 +5247,19 @@ textarea.sheet-sophontAugmentBox
 	grid-row-start: 1;
 	grid-row-end: 2;
 }
+
+.sheet-aliasThreatNameLong
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	width: 100%;
+	grid-column-start: 2;
+	grid-column-end: 6;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
 
 .sheet-pronounThreat
 {
