New NPC sheet set up and image
Added images NPC sheet images:
                behemoth
                shipLog
                shuttleSquadron
Set up for the shuttle Log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -437,6 +437,23 @@ textarea
 	grid-column-gap: 4px;
 }
 
+.sheet-shuttleLogSheetGrid
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/creatureLog.png);
+	background-size: 900px 285px;
+	background-repeat: no-repeat;
+	width: 900px;
+	height: 280px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 85px 70px 1fr 80px 1fr 150px 25px 25px 25px 25px 5px;
+	grid-template-rows: 24px repeat(14,18px) 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
+
 
 /* ******************************* */
 /*			Aspects		           */
