Set up Shuttle Log
Set up the basics of the Shuttle Log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -439,11 +439,11 @@ textarea
 
 .sheet-shuttleLogSheetGrid
 {
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/creatureLog.png);
-	background-size: 900px 285px;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/shuttleSquadron.png);
+	background-size: 900px 570.5px;
 	background-repeat: no-repeat;
 	width: 900px;
-	height: 280px;
+	height: 570px;
 	display: grid;
 	grid-row-gap: 0px;
 	grid-template-columns: 85px 70px 1fr 80px 1fr 150px 25px 25px 25px 25px 5px;
@@ -4992,7 +4992,7 @@ input[type="number"].sheet-resourceBox
 	padding-bottom: 8px;
 }
 
-/*				Letter of Marque			*/
+/* Letter of Marque */
 .sheet-letterOfMarque
 {
 	grid-area: letter;
@@ -5277,7 +5277,6 @@ textarea.sheet-sophontAugmentBox
 	grid-row-end: 2;
 }
 
-
 .sheet-pronounThreat
 {
 	grid-column-start: 4;
@@ -5428,7 +5427,52 @@ input.sheet-threatDamageBox
 	text-align: center;
 }
 
-/* Sophont Conditions*/
+/* Section Grid */
+.sheet-fourSectionGrid
+{
+	grid-column-start: 1;
+	grid-column-end: 9;
+	grid-row-start: 16;
+	grid-row-end: 17;
+	width: 900px;
+	height: 285px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 5px repeat(2, 20px 18px 30px 30px 1fr) 5px;
+	grid-template-rows: 32px repeat(2,24px repeat(5,18px)) 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
+
+.sheet-sixSectionGrid
+{
+	grid-column-start: 1;
+	grid-column-end: 9;
+	grid-row-start: 16;
+	grid-row-end: 17;
+	width: 900px;
+	height: 285px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 5px repeat(2, 20px 18px 30px 30px 1fr) 5px;
+	grid-template-rows: 32px repeat(3,24px repeat(5,18px)) 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
+
+.sheet-sectionTitle
+{
+	grid-column-start: 1;
+	grid-column-end: 9;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+/* Threat Armour & Conditions */
 .sheet-sophontConditionWidget
 {
 	grid-column-start: 6;
@@ -5497,6 +5541,23 @@ input.sheet-threatDamageBox
 	justify-self: end;
 }
 
+.sheet-shuttleSquadronConditionWidget
+{
+	grid-column-start: 6;
+	grid-column-end: 7;
+	grid-row-start: 1;
+	grid-row-end: 14;
+	width: 150px;
+	height: 275px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-template-columns: 18px auto 25px;
+	grid-template-rows: 20px repeat(11,25px) 1fr;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
 .sheet-additionalCompositeSophontConditionWidget
 {
 	grid-row-start: 2;
@@ -5542,12 +5603,26 @@ input.sheet-threatDamageBox
 	justify-self: end;
 }
 
+.sheet-additionalshuttleSquadronConditionWidget
+{
+	grid-row-start: 1;
+	grid-row-end: 14;
+	width: 25px;
+	height: 275px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-template-columns: 25px;
+	grid-template-rows: 20px repeat(11,25px) 1fr;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
 .sheet-additionalSwarmCondition0
 {
 	grid-column-start: 5;
 	grid-column-end: 6;
 }
-
 
 .sheet-additionalSwarmCondition1
 {
