Shuttle Log Progress
Nearly completed the shuttle log.

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -429,7 +429,7 @@ textarea
 	height: 280px;
 	display: grid;
 	grid-row-gap: 0px;
-	grid-template-columns: 85px 70px 1fr 80px 1fr 150px 25px 25px 25px 25px 5px;
+	grid-template-columns: 85px 70px 1fr 55px 1fr 150px 25px 25px 25px 25px 5px;
 	grid-template-rows: 24px repeat(14,18px) 1fr;
 	justify-items: start;
 	align-items: start;
@@ -440,14 +440,14 @@ textarea
 .sheet-shuttleLogSheetGrid
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/shuttleSquadron.png);
-	background-size: 900px 570.5px;
+	background-size: 900px 590px;
 	background-repeat: no-repeat;
 	width: 900px;
-	height: 570px;
+	height: 585px;
 	display: grid;
 	grid-row-gap: 0px;
-	grid-template-columns: 85px 70px 1fr 80px 1fr 150px 25px 25px 25px 25px 5px;
-	grid-template-rows: 24px repeat(14,18px) 1fr;
+	grid-template-columns: 100px 70px 1fr 80px 1fr 150px 25px 25px 25px 25px 5px;
+	grid-template-rows: 24px repeat(15,18px) 1fr;
 	justify-items: start;
 	align-items: start;
 	padding: 6px;
@@ -5186,6 +5186,17 @@ input[type="number"].sheet-resourceBox
 	font-size: 15px;
 }
 
+.sheet-topLineTextSpaceScale
+{
+	text-align: start;
+	font-variant: small-caps;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 15px;
+	padding-left: 10px;
+}
+
+
 .sheet-threatTextBox
 {
 	align-self: stretch;
@@ -5244,6 +5255,19 @@ textarea.sheet-sophontAugmentBox
 	width: 95%;
 }
 
+textarea.sheet-shuttleTagBox
+{
+	margin-top: 3px;
+	height: 130px;
+	width: 95%;
+}
+
+textarea.sheet-sectionTagBox
+{
+	margin-top: 3px;
+	height: 74px;
+	width: 95%;
+}
 
 .sheet-aliasThreat
 {
@@ -5411,6 +5435,24 @@ span.sheet-droneDamageBoxBG
 	margin-top: -10px;
 }
 
+span.sheet-sectionDamageBoxBG
+{
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: -2;
+	grid-row-end: -1;
+	align-self: center;
+	justify-self: start;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/damage.png);
+	background-size: 44px 44.5px;
+	background-repeat: no-repeat;
+	width: 44px;
+	height: 44.5px;
+	z-index: 2;
+	margin-left: 8px;
+	margin-top: -10px;
+}
+
 input.sheet-threatDamageBox
 {
 	grid-column-start: 1;
@@ -5427,49 +5469,144 @@ input.sheet-threatDamageBox
 	text-align: center;
 }
 
+input.sheet-sectionDamageBox
+{
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: -2;
+	grid-row-end: -1;
+	align-self: center;
+	justify-self: center;
+	font-size: 16px;
+	width: 2.5em;
+	height: 2em;
+	z-index: 3;
+	border: none;
+	text-align: center;
+}
+
+
 /* Section Grid */
 .sheet-fourSectionGrid
 {
 	grid-column-start: 1;
 	grid-column-end: 9;
-	grid-row-start: 16;
-	grid-row-end: 17;
-	width: 900px;
+	grid-row-start: 17;
+	grid-row-end: -1;
+	width: 780px;
 	height: 285px;
 	display: grid;
 	grid-row-gap: 0px;
-	grid-template-columns: 5px repeat(2, 20px 18px 30px 30px 1fr) 5px;
-	grid-template-rows: 32px repeat(2,24px repeat(5,18px)) 1fr;
+	grid-template-columns: 5px 1fr 1fr 5px;
+	grid-template-rows: 24px 1fr 1fr 10px;
 	justify-items: start;
 	align-items: start;
-	padding: 6px;
-	grid-column-gap: 4px;
+	grid-row-gap: 4px;
 }
 
 .sheet-sixSectionGrid
 {
 	grid-column-start: 1;
 	grid-column-end: 9;
-	grid-row-start: 16;
-	grid-row-end: 17;
-	width: 900px;
+	grid-row-start: 17;
+	grid-row-end: -1;
+	width: 780px;
 	height: 285px;
 	display: grid;
 	grid-row-gap: 0px;
-	grid-template-columns: 5px repeat(2, 20px 18px 30px 30px 1fr) 5px;
-	grid-template-rows: 32px repeat(3,24px repeat(5,18px)) 1fr;
+	grid-template-columns: 5px 1fr 1fr 5px;
+	grid-template-rows: 24px 1fr 1fr 1fr 10px;
 	justify-items: start;
 	align-items: start;
-	padding: 6px;
-	grid-column-gap: 4px;
+	grid-row-gap: 4px;
 }
 
 .sheet-sectionTitle
 {
 	grid-column-start: 1;
-	grid-column-end: 9;
+	grid-column-end: -1;
 	grid-row-start: 1;
 	grid-row-end: 2;
+}
+
+.sheet-sectionA
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+}
+
+.sheet-sectionB
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+}
+
+.sheet-section1
+{
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-section2
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-section3
+{
+	grid-row-start: 4;
+	grid-row-end: 5;
+}
+
+.sheet-sectionGrid
+{
+	width: 390px;
+	height: 130px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 18px 60px 1fr;
+	grid-template-rows: 25px 1fr;
+	justify-items: start;
+	align-items: start;
+	grid-column-gap: 0px;
+	padding-top: px;
+}
+
+.sheet-sectionCheckbox
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-sectionName
+{
+	font-variant: small-caps;
+	font-weight: 500;
+	text-align: left;
+	font-size: 13px;
+}
+
+.sheet-sectionTagTitle
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 3;
+	justify-self: end;
+	text-align: end;
+	font-size: 12px;
+}
+
+.sheet-sectionTagBoxLocation
+{
+	grid-column-start: 3;
+	grid-column-end: -1;
+	grid-row-start: 2;
+	grid-row-end: -1;
+	justify-self: stretch;
 }
 
 /* Threat Armour & Conditions */
@@ -5546,9 +5683,9 @@ input.sheet-threatDamageBox
 	grid-column-start: 6;
 	grid-column-end: 7;
 	grid-row-start: 1;
-	grid-row-end: 14;
+	grid-row-end: 17;
 	width: 150px;
-	height: 275px;
+	height: 300px;
 	display: grid;
 	grid-column-gap: 2px;
 	grid-template-columns: 18px auto 25px;
