Shuttle Log finished
Finished laying out the shuttle log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -5755,6 +5755,22 @@ input.sheet-sectionDamageBox
 	justify-self: end;
 }
 
+.sheet-sectionConditionWidget
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	width: 270px;
+	height: 25px;
+	display: grid;
+	grid-column-gap: 0px;
+	grid-template-columns: repeat(6,10px 25px) 25px 25px 1fr;
+	grid-template-rows: 25px;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+
+}
+
 .sheet-additionalSwarmCondition0
 {
 	grid-column-start: 5;
@@ -5949,4 +5965,94 @@ input[type=number].sheet-sophontConditionNumber::-webkit-inner-spin-button
 {
 	grid-row-start: 12;
 	grid-row-end: 13;
+}
+
+.sheet-sectionConditions
+{
+	grid-row-start: 1;
+	grid-row-end: -1;
+}
+
+.sheet-sectionCondition1
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+}
+
+.sheet-sectionCondition2
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+}
+
+.sheet-sectionCondition3
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+}
+
+.sheet-sectionCondition4
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+}
+
+.sheet-sectionCondition5
+{
+	grid-column-start: 5;
+	grid-column-end: 6;
+}
+
+.sheet-sectionCondition6
+{
+	grid-column-start: 6;
+	grid-column-end: 7;
+}
+
+.sheet-sectionCondition7
+{
+	grid-column-start: 7;
+	grid-column-end: 8;
+}
+
+.sheet-sectionCondition8
+{
+	grid-column-start: 8;
+	grid-column-end: 9;
+}
+
+.sheet-sectionCondition9
+{
+	grid-column-start: 9;
+	grid-column-end: 10;
+}
+
+.sheet-sectionCondition10
+{
+	grid-column-start: 10;
+	grid-column-end: 11;
+}
+
+.sheet-sectionCondition11
+{
+	grid-column-start: 11;
+	grid-column-end: 12;
+}
+
+.sheet-sectionCondition12
+{
+	grid-column-start: 12;
+	grid-column-end: 13;
+}
+
+.sheet-sectionCondition13
+{
+	grid-column-start: 13;
+	grid-column-end: 14;
+}
+
+.sheet-sectionCondition14
+{
+	grid-column-start: 14;
+	grid-column-end: 15;
 }
