Added Behemoth and Ship Logs
Finished the Behemoth Log
Finished the Ship Log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -454,6 +454,22 @@ textarea
 	grid-column-gap: 4px;
 }
 
+.sheet-behemothSheetGrid
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/behemoth.png);
+	background-size: 900px 590px;
+	background-repeat: no-repeat;
+	width: 900px;
+	height: 585px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 70px 60px 1fr 60px 1fr;
+	grid-template-rows: 24px repeat(7,18px) 14px 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
 
 /* ******************************* */
 /*			Aspects		           */
@@ -5220,6 +5236,30 @@ input[type=number].sheet-threatNumberBox
 	text-align:left;
 }
 
+input[type=number].sheet-shipTonnageNumberBox
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	font-weight: 500;
+	width: 306px;
+	vertical-align: baseline;
+	justify-self: start;
+	text-align: left;
+}
+
+input[type=number].sheet-behemothLengthNumberBox
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	font-weight: 500;
+	width: 340px;
+	vertical-align: baseline;
+	justify-self: start;
+	text-align: left;
+}
+
 textarea.sheet-sophontTagBox
 {
 	margin-top: 3px;
@@ -5259,6 +5299,20 @@ textarea.sheet-shuttleTagBox
 {
 	margin-top: 3px;
 	height: 130px;
+	width: 95%;
+}
+
+textarea.sheet-shipNoteBox
+{
+	margin-top: 3px;
+	height: 100px;
+	width: 95%;
+}
+
+textarea.sheet-behemothNoteBox
+{
+	margin-top: 3px;
+	height: 35px;
 	width: 95%;
 }
 
@@ -5453,6 +5507,25 @@ span.sheet-sectionDamageBoxBG
 	margin-top: -10px;
 }
 
+span.sheet-sectionBehemothDamageBoxBG
+{
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: -2;
+	grid-row-end: -1;
+	align-self: center;
+	justify-self: start;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/damage.png);
+	background-size: 44px 44.5px;
+	background-repeat: no-repeat;
+	width: 44px;
+	height: 44.5px;
+	z-index: 2;
+	margin-left: 28px;
+	margin-top: -10px;
+}
+
+
 input.sheet-threatDamageBox
 {
 	grid-column-start: 1;
@@ -5487,7 +5560,7 @@ input.sheet-sectionDamageBox
 
 
 /* Section Grid */
-.sheet-fourSectionGrid
+.sheet-fourSectionShuttleGrid
 {
 	grid-column-start: 1;
 	grid-column-end: 9;
@@ -5504,14 +5577,32 @@ input.sheet-sectionDamageBox
 	grid-row-gap: 4px;
 }
 
-.sheet-sixSectionGrid
+.sheet-fourSectionGrid
 {
 	grid-column-start: 1;
 	grid-column-end: 9;
 	grid-row-start: 17;
 	grid-row-end: -1;
-	width: 780px;
+	width: 880px;
 	height: 285px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 5px 1fr 1fr 5px;
+	grid-template-rows: 24px 1fr 1fr 10px;
+	justify-items: start;
+	align-items: start;
+	grid-row-gap: 4px;
+	padding-left: 4px;
+}
+
+.sheet-sixSectionGrid
+{
+	grid-column-start: 1;
+	grid-column-end: 9;
+	grid-row-start: 10;
+	grid-row-end: -1;
+	width: 900px;
+	height: 420px;
 	display: grid;
 	grid-row-gap: 0px;
 	grid-template-columns: 5px 1fr 1fr 5px;
@@ -5570,7 +5661,32 @@ input.sheet-sectionDamageBox
 	justify-items: start;
 	align-items: start;
 	grid-column-gap: 0px;
-	padding-top: px;
+}
+
+.sheet-sectionShipGrid
+{
+	width: 440px;
+	height: 130px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 18px 60px 1fr 1fr;
+	grid-template-rows: 25px 1fr;
+	justify-items: start;
+	align-items: start;
+	grid-column-gap: 0px;
+}
+
+.sheet-sectionBehemothGrid
+{
+	width: 440px;
+	height: 130px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 18px 100px 1fr;
+	grid-template-rows: 25px 18px 1fr;
+	justify-items: start;
+	align-items: start;
+	grid-column-gap: 0px;
 }
 
 .sheet-sectionCheckbox
@@ -5589,6 +5705,14 @@ input.sheet-sectionDamageBox
 	font-size: 13px;
 }
 
+.sheet-sectionFacing
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
 .sheet-sectionTagTitle
 {
 	grid-column-start: 2;
@@ -5605,6 +5729,46 @@ input.sheet-sectionDamageBox
 	grid-column-start: 3;
 	grid-column-end: -1;
 	grid-row-start: 2;
+	grid-row-end: -1;
+	justify-self: stretch;
+}
+
+.sheet-sectionBehemothDescriptionTitle
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 3;
+	justify-self: end;
+	text-align: end;
+	font-size: 12px;
+}
+
+.sheet-sectionBehemothDescription
+{
+	grid-column-start: 3;
+	grid-column-end: -1;
+	grid-row-start: 2;
+	grid-row-end: 3;
+	justify-self: stretch;
+}
+
+.sheet-sectionBehemothTagTitle
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 3;
+	grid-row-end: 4;
+	justify-self: end;
+	text-align: end;
+	font-size: 12px;
+}
+
+.sheet-sectionBehemothTagBox
+{
+	grid-column-start: 3;
+	grid-column-end: -1;
+	grid-row-start: 3;
 	grid-row-end: -1;
 	justify-self: stretch;
 }
@@ -5768,7 +5932,36 @@ input.sheet-sectionDamageBox
 	justify-items: start;
 	align-items: start;
 	justify-self: end;
+}
 
+.sheet-sectionShipConditionWidget
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+	width: 270px;
+	height: 25px;
+	display: grid;
+	grid-column-gap: 0px;
+	grid-template-columns: repeat(6,10px 25px) 25px 25px 1fr;
+	grid-template-rows: 25px;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
+.sheet-sectionbehemothConditionWidget
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	width: 270px;
+	height: 25px;
+	display: grid;
+	grid-column-gap: 0px;
+	grid-template-columns: repeat(6,10px 25px) 25px 25px 1fr;
+	grid-template-rows: 25px;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
 }
 
 .sheet-additionalSwarmCondition0
