Capital Ship Set up
Everything except conditions set up for the Capital Ship

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -41,7 +41,8 @@ input.sheet-behemothSelector:checked ~ div.sheet-behemothSheet,
 input.sheet-droneSelector:checked ~ div.sheet-droneSheet,
 input.sheet-shuttleSelector:checked ~ div.sheet-shuttleSheet,
 input.sheet-smallCraftSelector:checked ~ div.sheet-smallCraftSheet,
-input.sheet-shipLogSelector:checked ~ div.sheet-shipLogSheet
+input.sheet-shipLogSelector:checked ~ div.sheet-shipLogSheet,
+input.sheet-capitalShipSelector:checked ~ div.sheet-capitalShipSheet
 {
 	display: block;
 }
@@ -470,6 +471,21 @@ textarea
 	padding: 6px;
 	grid-column-gap: 4px;
 }
+
+.sheet-capitalShipSheetGrid
+{
+	width: 900px;
+	height: 585px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 100px 2fr 70px 1fr;
+	grid-template-rows: repeat(7,18px) 14px 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 0px;
+	grid-column-gap: 4px;
+}
+
 
 /* ******************************* */
 /*			Aspects		           */
@@ -5316,6 +5332,14 @@ textarea.sheet-behemothNoteBox
 	width: 95%;
 }
 
+textarea.sheet-capitalShipNoteBox
+{
+	margin-top: 3px;
+	height: 54px;
+	width: 95%;
+}
+
+
 textarea.sheet-sectionTagBox
 {
 	margin-top: 3px;
@@ -5434,6 +5458,40 @@ textarea.sheet-sectionTagBox
 	grid-row-start: 10;
 	grid-row-end: 15;
 }
+
+.sheet-capitalShipAspectColumnA
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	justify-self: end;
+}
+
+.sheet-capitalShipTextColumnA
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+}
+
+.sheet-capitalShipTextColumnFull
+{
+	grid-column-start: 2;
+	grid-column-end: 5;
+}
+
+
+.sheet-capitalShipAspectColumnB
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	justify-self: end;
+}
+
+.sheet-capitalShipTextColumnB
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+}
+
 
 span.sheet-threatDamageBoxBG
 {
@@ -5612,6 +5670,23 @@ input.sheet-sectionDamageBox
 	grid-row-gap: 4px;
 }
 
+.sheet-tenSectionGrid
+{
+	grid-column-start: 1;
+	grid-column-end: -1;
+	grid-row-start: 9;
+	grid-row-end: -1;
+	width: 900px;
+	height: 420px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 5px 1fr 1fr 5px;
+	grid-template-rows: 32px 1fr 1fr 1fr 1fr 1fr 10px;
+	justify-items: start;
+	align-items: start;
+	grid-row-gap: 4px;
+}
+
 .sheet-sectionTitle
 {
 	grid-column-start: 1;
@@ -5648,6 +5723,18 @@ input.sheet-sectionDamageBox
 {
 	grid-row-start: 4;
 	grid-row-end: 5;
+}
+
+.sheet-section4
+{
+	grid-row-start: 5;
+	grid-row-end: 6;
+}
+
+.sheet-section5
+{
+	grid-row-start: 6;
+	grid-row-end: 7;
 }
 
 .sheet-sectionGrid
