Updated image locations

--- a/Torg Eternity/Torg Eternity.css
+++ b/Torg Eternity/Torg Eternity.css
@@ -42,7 +42,7 @@ input.sheet-tab + span::before
     text-align: center;
     display: inline-block;
     background: transparent;
-    background-image: url("https://i.imgur.com/eIx8kFs.png");
+    background-image: url("https://raw.githubusercontent.com/G-G-G/roll20-character-sheets/torgeternity/Torg%20Eternity/images/TE_tab-inactive.png");
     background-size: contain;
     position: absolute;
     width: 150px;
@@ -58,7 +58,7 @@ input.sheet-tab + span::before
 input.sheet-tab:checked + span::before
 {
     background: transparent;
-    background-image: url("https://i.imgur.com/Vzs8BCM.png");
+    background-image: url("https://raw.githubusercontent.com/G-G-G/roll20-character-sheets/torgeternity/Torg%20Eternity/images/TE_tab-active.png");
     background-size: contain;
     position: absolute;
 }
@@ -270,7 +270,7 @@ p.sheet-center {
 */
 div.sheet-container {
     width:850px;
-    background-image: url("https://i.imgur.com/JuVbdSf.png");
+    background-image: url("https://raw.githubusercontent.com/G-G-G/roll20-character-sheets/torgeternity/Torg%20Eternity/images/TE_background.png");
     border-radius: 15px;
     
 }
@@ -542,7 +542,7 @@ ROLL TEMPLATE
 .sheet-rolltemplate-torg a[href^="!"], 
 .sheet-rolltemplate-torg a[href^="~"] {
     background-color: transparent;
-    background-image: url("https://i.imgur.com/Vzs8BCM.png");
+    background-image: url("https://raw.githubusercontent.com/G-G-G/roll20-character-sheets/torgeternity/Torg%20Eternity/images/TE_tab-active.png");
     background-repeat: no-repeat;
     background-size: contain;
     width:75px;
