Capital Ship Complete & Ship Log bug fixed
Completed layout of Capital ship
Fixed bug from missing ship log stlye
Fixed attibutes for ship log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -472,6 +472,24 @@ textarea
 	grid-column-gap: 4px;
 }
 
+.sheet-shipLogSheetGrid
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/shipLog.png);
+	background-size: 900px 590px;
+	background-repeat: no-repeat;
+	width: 900px;
+	height: 585px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 100px 80px 1fr 70px 1fr;
+	grid-template-rows: 24px repeat(14,18px) 14px 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
+
+
 .sheet-capitalShipSheetGrid
 {
 	width: 900px;
@@ -6045,6 +6063,21 @@ input.sheet-sectionDamageBox
 	display: grid;
 	grid-column-gap: 0px;
 	grid-template-columns: repeat(6,10px 25px) 25px 25px 1fr;
+	grid-template-rows: 25px;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
+.sheet-capitalShipConditionWidget
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	width: 285px;
+	height: 25px;
+	display: grid;
+	grid-column-gap: 0px;
+	grid-template-columns: repeat(3,10px 25px) repeat(7, 25px) 1fr;
 	grid-template-rows: 25px;
 	justify-items: start;
 	align-items: start;
