Tweaked Tug Armour and updated Json
Switched Launchbay Tug Armour printer to use a better grid, which looks like the ones used other places
Updated Json file with info on Capital ship.
Increased Version number to 2

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -3576,6 +3576,58 @@ input[type="number"].sheet-currentCharge
 	grid-row-end: 10;
 	flex-flow: nowrap;
 	justify-self: start;
+	display: grid;
+	grid-column-gap: 0px;
+	grid-template-columns: repeat(3,10px 18px);
+	grid-template-rows: 25px;
+}
+
+.sheet-launchBayArmourPip1
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-launchBayArmourPip2
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-launchBayArmourPip3
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-launchBayArmourPip4
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-launchBayArmourPip5
+{
+	grid-column-start: 5;
+	grid-column-end: 6;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-launchBayArmourPip6
+{
+	grid-column-start: 6;
+	grid-column-end: 7;
+	grid-row-start: 1;
+	grid-row-end: 2;
 }
 
 .sheet-launchBaycapacityPips
@@ -5267,7 +5319,7 @@ input[type=number].sheet-threatNumberBox
 	width: 185px;
 	vertical-align: baseline;
 	justify-self: start;
-	text-align:left;
+	text-align: left;
 }
 
 input[type=number].sheet-shipTonnageNumberBox
@@ -6177,14 +6229,13 @@ input.sheet-sectionDamageBox
 input[type=number].sheet-sophontConditionNumber
 {
 	width: 1.5em;
-	height:1.5em;
-
+	height: 1.5em;
 }
 
-input[type=number].sheet-sophontConditionNumber::-webkit-inner-spin-button
-{
-	-webkit-appearance: none;
-}
+	input[type=number].sheet-sophontConditionNumber::-webkit-inner-spin-button
+	{
+		-webkit-appearance: none;
+	}
 
 .sheet-sophontConditionCheckbox
 {
