Fixed oversized textarea on behemoth sheet

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -5409,13 +5409,20 @@ textarea.sheet-capitalShipNoteBox
 	width: 95%;
 }
 
-
 textarea.sheet-sectionTagBox
+{
+	margin-top: 3px;
+	height: 65px;
+	width: 95%;
+}
+
+textarea.sheet-sectionShipTagBox
 {
 	margin-top: 3px;
 	height: 74px;
 	width: 95%;
 }
+
 
 .sheet-aliasThreat
 {
