Ok, maybe it wasnt the last update after all.

--- a/Torg Eternity/Torg Eternity.css
+++ b/Torg Eternity/Torg Eternity.css
@@ -471,7 +471,7 @@ ROLL TEMPLATE
 .sheet-rolltemplate-torg div.sheet-highlight {
     height: 20px;
     line-height: 20px;
-    background-color: white;
+    background-color: gold;
     margin-left: 5px;
     padding-left: 0px;
     margin-right: 5px;
