This time, for sure

--- a/Torg Eternity/Torg Eternity.css
+++ b/Torg Eternity/Torg Eternity.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Aldrich&display=swap');
+
 /*------------------------------------*\
   #TABS
 \*------------------------------------*/
@@ -200,6 +202,7 @@ p.sheet-center {
     text-align: center;
     line-height: 20px;
     font-size: 16px;
+    font-family: Aldrich;
 }
 
 .charsheet label {
