--- a/Descent into Midnight/DescentIntoMidnight.css
+++ b/Descent into Midnight/DescentIntoMidnight.css
@@ -171,11 +171,30 @@ input[disabled] {-moz-appearance: textfield}
 	margin-left: 0.5%;
 }
 
-.sheet-statistics .sheet-header {
-	width: 18%;
+.sheet-statistics .sheet-pronoun {
+	width: 35%;
+}
 
+.sheet-statistics input[type="text"] {
+	width: 10em;
+}
+
+.sheet-statistics .sheet-header {
 	float: left;
 	margin-right: 0.6%;
+}
+
+.sheet-statistics input[type="number"] {
+	width: 2em;
+}
+
+.sheet-statistics input[type="number"]:disabled {
+	width: 1em;
+}
+
+.sheet-statistics .sheet-corruption,
+.sheet-statistics .sheet-harmony {
+	width: 20%;
 }
 
 .sheet-statistics .sheet-header:last-child {
@@ -191,7 +210,7 @@ input[disabled] {-moz-appearance: textfield}
 
 .sheet-attributes .sheet-header {
 	height: auto;
-	width: 15%;
+	width: 18.2%;
 	float: left;
 	margin-right: 0.5%;
 	padding: 4px;
@@ -234,6 +253,11 @@ input[disabled] {-moz-appearance: textfield}
 	z-index: 1;
 }
 
+.sheet-attributes .sheet-header button[type="roll"] {
+	width: 90%;
+	height: auto;
+}
+
 .sheet-attributes .sheet-row-1 input {
 	width: 100%;
 }
@@ -258,13 +282,6 @@ input[disabled] {-moz-appearance: textfield}
 .sheet-attributes .sheet-row-2 input {
 	height: 14px;
 	margin: 0;
-}
-
-.sheet-attributes .sheet-row-3 button {
-	position: absolute;
-	right: 2px;
-	bottom: 2px;
-	z-index: 1;
 }
 
 
