--- a/Descent into Midnight/DescentIntoMidnight.css
+++ b/Descent into Midnight/DescentIntoMidnight.css
@@ -184,6 +184,10 @@ input[disabled] {-moz-appearance: textfield}
 	margin-right: 0.6%;
 }
 
+.sheet-statistics input[type="checkbox"] {
+	width:1em;
+}
+
 .sheet-statistics input[type="number"] {
 	width: 2em;
 }
@@ -194,7 +198,7 @@ input[disabled] {-moz-appearance: textfield}
 
 .sheet-statistics .sheet-corruption,
 .sheet-statistics .sheet-harmony {
-	width: 20%;
+	width: 25%;
 }
 
 .sheet-statistics .sheet-header:last-child {
@@ -276,14 +280,19 @@ input[disabled] {-moz-appearance: textfield}
 
 .sheet-attributes .sheet-row-2 label {
 	color: #DDD;
-	font-size: 80%;
 }
 
 .sheet-attributes .sheet-row-2 input {
-	height: 14px;
+	height: 12px;
 	margin: 0;
 }
 
+/* ===== CHARACTER DESCRIPTION ===== */
+
+span.sheet-description-name {
+	font-weight: bold;
+	font-size: large;
+}
 
 /* ===== UTILITY ===== */
 .sheet-clearfix {
@@ -304,10 +313,19 @@ input[disabled] {-moz-appearance: textfield}
 	resize: vertical;
 }
 
-.sheet-section-moves input[name="attr_movename"],
+.sheet-section-moves input[name="attr_movename"] {
+	width: 77%;
+}
+
+.sheet-section-moves select {
+	width: 18%;
+}
+
 .sheet-section-spells input[name="attr_spellname"] {
 	width: 95%;
 }
+
+
 
 .sheet-section-gear input[name="attr_itemtags"] {
 	width: 85%;
