--- a/Descent into Midnight/DescentIntoMidnight.css
+++ b/Descent into Midnight/DescentIntoMidnight.css
@@ -294,6 +294,13 @@ span.sheet-description-name {
 	font-size: large;
 }
 
+/* ===== BASIC AND SPECIAL MOVES ===== */
+
+span.sheet-basicmove-name {
+	font-weight: bold;
+	font-size: large;
+}
+
 /* ===== UTILITY ===== */
 .sheet-clearfix {
 	clear: both;
